# EliCoder-30B-A3B

./: .gitignore  AGENTS.md  README.md  REMCODER.md
build_pipeline/: .env.example  .gitignore  README.md  pyproject.toml
build_pipeline/configs/: model_yaml_template.yaml  quants.yaml
build_pipeline/scripts/: build_all.sh
coder/: README.md  pyproject.toml
coder/.coder/: memory.sqlite
coder/coder/: agent.py  cli.py  client.py  context.py  settings.py
coder/coder/tools/: __init__.py  code_intel.py  devserver.py  execute.py  fs.py  git_tool.py  github_tool.py  lsp.py  memory.py  patch.py  planning.py  project.py  registry.py  semantic.py  shell.py  subagent.py  think.py  web.py
docs/: ARCHITECTURE.md  FINETUNING_AUDIT_PLAN.md  FINETUNING_SPEEDUP_PLAN.md
eval/: README.md  _common.py  aggregate.py  requirements.txt  run_bfcl.py  run_humaneval.py  run_livecodebench.py  run_mbpp.py  run_ruler.py  run_swebench.py
training/: 01_data_build.ipynb  01_data_build.py  02_sft_unsloth.ipynb  02_sft_unsloth.py  03_dpo_unsloth.ipynb  03_dpo_unsloth.py  04_longctx.ipynb  04_longctx.py  05_export.ipynb  05_export.py  README.md  RUNPOD.md  RUNPOD_FINETUNING_PLAN.md  _bootstrap.py  analyze_seqlen.py  make_notebooks.py  push_modelcards.py  rename_repos.py
training/configs/: dpo.yaml  longctx.yaml  sft.yaml
training/runpod/: 01_data_build.py  02_sft.py  03_dpo.py  04_longctx.py  05_export.py  06_bfcl_eval.py  DEPENDENCIES.md  LESSONS_LEARNED.md  _agent_eval.py  _bootstrap.py  _modelcard.py  pipeline.sh  watch.py
training/runpod/docs/: AUDIT_AND_SPEEDUP_PLAN.md  LESSONS_LEARNED.md  runpod.md
